# BitGNPAC

./: README.md  agent.py  main.py  pyproject.toml
.claude/: settings.local.json
bitgn/: harness_connect.py  harness_pb2_grpc.py
bitgn/vm/: pcm_connect.py  pcm_pb2_grpc.py
