[project]
name = "bitgn-pac1-agent"
version = "0.1.0"
description = "BitGN PAC1 agent — adapted from AgentBeats template"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitgn-api-connectrpc-python==0.9.0.1.20260324104753+6b18c777b19a",
    "bitgn-api-protocolbuffers-python==34.1.0.1.20260324104753+6b18c777b19a",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "anthropic>=0.50.0",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
package = false
