[project]
name = "bitgn-pac1-agent"
version = "0.1.0"
description = "BitGN PAC1 agent — adapted from AgentBeats template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "connectrpc>=0.9.0",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "protobuf>=5.0.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
]

[tool.uv]
package = false
